# cfengine-cli

./: .gitignore  HACKING.md  Makefile  README.md  black_output.txt  commit_message.txt  pyproject.toml  renovate.json  requirements.txt  run_tests.sh
.github/: dependabot.yml  renovate-config.js
.github/workflows/: black-check.yml  black-format.yml  black.yml  format.yml  lint-policy-in-other-repos.yml  lint.yml  make-check.yml  pypi-publish.yml  renovate.yml  stale.yml  test.yml  tests.yml  update-syntax-description.yml
cfengine_cli/: commands.py  demo.py  main.py  packages.py  remote.py  spawn.py  ssh.py  utils.py  web.py
src/cfengine_cli/: builtin_types.py  changelog.py  commands.py  deptool.py  dev.py  docs.py  docs_formatting.py  format.py  lint.py  lint_csv.py  lint_yml.py  main.py  paths.py  syntax-description.json  up.py  validate.py  version.py
tests/: run-formatting-tests.sh  run-up-validate-tests.sh  test_cache.py  test_deps.py  test_packages.py  test_spawn.py  test_ssh.py  test_utils.py
tests/docker/: 001-docker-install-test.sh
tests/format/: 001_hello_world.expected.cf  002_basics.expected.cf  002_basics.input.cf  003_wrapping.expected.cf  003_wrapping.input.cf  004_comments.expected.cf  004_comments.input.cf  005_bundle_comments.expected.cf  005_bundle_comments.input.cf  006_remove_empty_comments.expected.cf  006_remove_empty_comments.input.cf  010_stakeholder.expected.cf  011_macros.expected.cf  011_macros.input.cf  011_promises.expected.cf  012_quotes.expected.cf  012_quotes.input.cf  012_sameline_comments.expected.cf  (+1 more)
tests/shell/: 001-help.sh  (+1 more)
(+48 files in other folders)
